@@ -735,8 +735,16 @@ log4j.appender.sensor-dev.MaxBackupIndex = 0
 log4j.appender.sensor-dev.layout = org.apache.log4j.PatternLayout
 log4j.appender.sensor-dev.layout.ConversionPattern = %p %d : %m%n
 
+# ---- DROOLS RULES LOG ---------------------------------------------------------------------------
 
-
+log4j.logger.OpenRemote.Controller.runtime.cache.event.processor.drools = ALL, rule-file, openremote-console
+log4j.appender.rule-file = org.apache.log4j.RollingFileAppender
+log4j.appender.rule-file.File = ../logs/rules/drools.log
+log4j.appender.rule-file.Threshold = DEBUG 
+log4j.appender.rule-file.MaxFileSize = 500KB
+log4j.appender.rule-file.MaxBackupIndex = 10 
+log4j.appender.rule-file.layout = org.apache.log4j.PatternLayout
+log4j.appender.rule-file.layout.ConversionPattern = %p %d (Drools): %m%n
 
 # -------------------------------------------------------------------------------------------------
 
